# ProPFA

./: .gitignore  Makefile  README.md  Readme.md  configure  configure.ac  latte_input2(make_it_latte_input)  readme  readme.md  sample2.c
src/: Makefile  Makefile.in  driver.py  driver.py.in  getconds.py  getconds.py.in  insert_invariant.cpp  interfacing.cpp  invariant_input.cpp  latte_input  latte_input1(make_it_latte_input)  lexical.l  make_script  modify.py  modify.py.in  parser.y  path.h.in  run_script  sample1.c  sample_input.c  totext.c  wpcond_paths.cpp
src/code/: Makefile  Makefile.in  configure  configure.ac  yara
src/code/src/: Makefile  input  test_suit.py
src/code/src/argparse/: argparse.c
src/code/src/domains/: util.h
src/code/src/domains/abstract/: abstract.c
src/code/src/domains/concrete/: concrete.c
src/code/src/parser/: Makefile  grammar.tab.c  grammar.tab.h  lex.yy.c
